--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.0.4",
     "classnames": "^2.2.6",
     "is-url": "^1.2.4",
+    "nanoid": "^3.1.23",
     "next": "10.0.1",
     "postcss": "^8.1.14",
     "react": "17.0.1",
